v4.5 ()
* Fixed bug in accuracy.gts() when returning in-sample accuracy.
* Fixed bug in forecast.gts() detecting the right default forecasting horizon.
* Fixed bug in gts() for a gts with one grouping variable.

v4.4 (22 July 2014)
* Allowed multiple seasonal objects "msts" in hts() and gts().
* Fixed bug of MASE in accuracy.gts().
* Allowed user's defined forecasting function in forecast.gts().

v4.3 (10 June 2014)
* Fixed bug of the arg "include" in plot.gts, when there are not yearly data.
* Fixed bug in combinef(), when it handles a simple hierarchy with 2 levels.
* Improved arg "characters" in hts() to automate the node structure.
* Added a new arg "characters" in gts(), which will automate the grouping matrix.
* Added a new reference to combinef() man.
* Made 'sd' the default weight in forecast.gts().

v4.2 (25 Mar 2014)
* Fixed Next.Generic error in accuracy.gts.
* Adjust weights = sd.

v4.1 (3 Mar 2014)
* Set the default parallel processes to 2.
* Fixed three dots in parallel computing for forecast.gts.
* Speeded up the topdown approaches.

v4.0 (10 Feb 2014)
* Speeded up all existing functions.
* Restructured hts function. Argument g is replaced with nodes. Added bnames and 
	characters to allow custom names.
* Added argument gnames to gts function.
* Argument groups in gts function allows the gmatrix with characters.
* Added function aggts in which users can specify whatever levels they like.
* Renamed Smatrix to smatrix.
* Added summary.gts function.
* Added more arguments to forecast.gts such as keep.fitted, keep.resid, lambda, 
	weights.
* When setting method = "mo" in forecasts.gts, argument level started with 0 
	rather than 1.
* Import parallel package in order to support for parallel processing.
* Added more criterions to accuracy.gts function. When keep.fitted = TRUE in 
	forecast.gts function, accuracy.gts can also return in-sample error measures 
	at the bottom level.
* Dropped argument criterions in accuracy.gts function.