@@ -2,8 +2,8 @@ Package: hts
 Type: Package
 Title: Hierarchical and grouped time series
 Version: 4.5
-Depends: forecast (>= 5.0)
-Imports: SparseM, parallel, utils
+Depends: forecast (>= 5.0), SparseM
+Imports: parallel, utils
 Suggests: testthat
 LazyLoad: yes
 LazyData: yes
