@@ -79,7 +79,7 @@ x1 <- gts(bts1, characters = list(c(3, 4), c(1, 1)))
 
 # Example 3 with a non-hierarchical grouped time series of 3 grouping variables (state, age and sex)
 bnames2 <- c("VIC1F", "VIC1M", "VIC2F", "VIC2M", "VIC3F", "VIC3M",
-             "NSW1F", "NSW1F", "NSW2F", "NSW2M", "NSW3F", "NSW3M")
+             "NSW1F", "NSW1M", "NSW2F", "NSW2M", "NSW3F", "NSW3M")
 bts2 <- matrix(ts(rnorm(120)), ncol = 12)
 colnames(bts2) <- bnames2
 x2 <- gts(bts2, characters = c(3, 1, 1))
